# emimg

./: .gitignore  CMakeLists.txt  emimg-config.cmake.in
include/: emimg.h
src/: CMakeLists.txt  disk.c  emimg-tool.c  emimg.c  mtape.c  ptape.c
